# liminal-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build_client_x86.bat  build_engine_x86.bat  build_game_client_x86.bat  build_game_server_x86.bat  build_game_x86.bat  build_multiplayer_client_x86.bat  build_multiplayer_server_x86.bat  build_raycaster_x86.bat  build_server_x86.bat  build_wolf3d_x86.bat  build_x86.bat  game-engine.sln  project-kilonova.sln  run_client_x86.bat  run_game_x86.bat  run_raycaster_x86.bat  run_server_x86.bat  run_x86.bat  vcpkg.json
breakout/: .gitignore  breakout.vcxproj
editor/: CMakeLists.txt
editor/data/scenes/: demo.json
editor/data/skyboxes/: README
editor/data/textures/: README
editor/src/: app.cpp  editor.cpp
engine/: .gitignore  CMakeLists.txt  engine.vcxproj  engine.vcxproj.filters
engine/assets/shaders/: deferred_directional.frag  deferred_point.frag  deferred_spot.frag  deferred_sun.frag  depth.vert  forward.vert  forward_color.frag  forward_directional.frag  forward_point.frag  forward_reflection.frag  forward_scene.frag  forward_spot.frag  forward_sun.frag  geometry.vert  post.frag  post.vert  skybox.frag  skybox.vert  sprite.frag  sprite.vert  water.frag  water.vert
engine/data/shaders/: brdf.vs  color.fs  depth_cube.fs  depth_cube_skinned_mesh.vs  geometry_skinned_mesh.vs  geometry_terrain.fs  prefilter_convolution.fs  water.fs
engine/data/shaders/glsl/: distribution_ggx.glsl  fresnel_schlick.glsl  hammersley.glsl  importance_sample_ggx.glsl  math.glsl  skinned_mesh_constants.glsl
engine/data/textures/: README
engine/include/: liminal.hpp  main.hpp  stb_image.h
engine/include/components/: audio_source.hpp  mesh_renderer.hpp  script.hpp  sprite.hpp  terrain.hpp
engine/include/core/: app.hpp  assets.hpp  engine.hpp  scene.hpp
engine/include/engine/: audio.h  bitmap.h  camera.h  chunk.h  cubemap.h  directional_light.h  engine.h  font.h  material.h  mesh.h  music.h  net.h  object.h  point_light.h  program.h  renderer.h  scene.h  spot_light.h  sprite.h  tcp.h  texture.h  udp.h  water.h  window.h
engine/include/engine/audio/: audio.h  sound.h  source.h
engine/include/engine/core/: log.h  time.h
engine/include/engine/entities/: camera.h  directional_light.h  object.h  point_light.h  spot_light.h  sprite.h  sun.h  water.h
engine/include/engine/net/: http.h  tcp.h  udp.h
engine/include/engine/rendering/: assets.h  cubemap.h  material.h  mesh.h  program.h  renderer.h  texture.h  window.h
engine/include/graphics/: mesh.hpp  model.hpp  program.hpp  renderer.hpp
engine/include/liminal/: liminal.hpp  main.hpp
engine/include/liminal/audio/: audio.hpp  listener.hpp  sound.hpp  source.hpp
engine/include/liminal/components/: audio_listener.hpp  audio_source.hpp  camera.hpp  character.hpp  directional_light.hpp  mesh_renderer.hpp  physical.hpp  point_light.hpp  renderable.hpp  script.hpp  spot_light.hpp  sprite.hpp  terrain.hpp  transform.hpp  water.hpp
engine/include/liminal/core/: al_context.hpp  al_device.hpp  app.hpp  assets.hpp  audio.hpp  engine.hpp  entity.hpp  gl_context.hpp  glew.hpp  imgui_context.hpp  physics.hpp  platform.hpp  renderer.hpp  scene.hpp  sdl.hpp  sdl_image.hpp  sdl_mixer.hpp  window.hpp
engine/include/liminal/entities/: entity.hpp  scene.hpp
engine/include/liminal/graphics/: camera.hpp  cubemap.hpp  framebuffer.hpp  mesh.hpp  model.hpp  program.hpp  renderbuffer.hpp  renderer.hpp  skybox.hpp  texture.hpp  vertex.hpp
engine/include/liminal/input/: input.hpp
engine/include/liminal/physics/: character_controller.hpp  rigidbody.hpp  world.hpp
engine/include/liminal/scripting/: lua_state.hpp
engine/src/: audio.c  camera.c  chunk.c  core.c  engine.c  image.c  material.c  mesh.c  object.c  point_light.c  program.c  renderer.c  scene.c  spot_light.c  sprite.c  udp.c  water.c  window.c
engine/src/audio/: audio.c  audio.cpp  chunk.c  listener.cpp  music.c  sound.c  sound.cpp  source.c  source.cpp
engine/src/components/: audio_listener.cpp  audio_source.cpp  camera.cpp  directional_light.cpp  mesh_renderer.cpp  physical.cpp  point_light.cpp  renderable.cpp  script.cpp  spot_light.cpp  sprite.cpp  terrain.cpp  transform.cpp  water.cpp
engine/src/core/: al_context.cpp  al_device.cpp  app.cpp  assets.cpp  audio.cpp  bitmap.c  engine.cpp  gl_context.cpp  glew.cpp  imgui_context.cpp  physics.cpp  platform.cpp  renderer.cpp  scene.cpp  sdl.cpp  sdl_image.cpp  sdl_mixer.cpp  time.c  window.cpp
engine/src/entities/: camera.c  directional_light.c  object.c  point_light.c  scene.cpp  spot_light.c  sprite.c  sun.c  water.c
engine/src/graphics/: camera.cpp  cubemap.cpp  framebuffer.cpp  mesh.cpp  model.cpp  program.cpp  renderbuffer.cpp  renderer.cpp  skybox.cpp  texture.cpp  vertex.cpp
engine/src/net/: tcp.c
engine/src/physics/: character_controller.cpp  rigidbody.cpp  world.cpp
engine/src/rendering/: assets.c  cubemap.c  material.c  mesh.c  program.c  renderer.c  texture.c  window.c
engine/src/scripting/: lua_state.cpp
game/: game.vcxproj
minecraft/: CMakeLists.txt
minecraft/src/: app.cpp  block.cpp  block.hpp  chunk.cpp  chunk.hpp  mesh_data.cpp  mesh_data.hpp  minecraft.cpp  world.cpp  world.hpp
minecraft/src/blocks/: air_block.cpp  air_block.hpp  dirt_block.cpp  dirt_block.hpp  grass_block.cpp  grass_block.hpp  stone_block.cpp  stone_block.hpp
multiplayer/: .gitignore  multiplayer.vcxproj  multiplayer.vcxproj.filters
player/: CMakeLists.txt
player/src/: app.cpp  player.cpp
project-kilonova/: project-kilonova.vcxproj  project-kilonova.vcxproj.filters
raycaster/: raycaster.vcxproj
runtime/: CMakeLists.txt
src/: assets.hpp  atlas.cc  atlas.cpp  atlas.hh  atlas.hpp  audio.cc  audio.cpp  audio.hpp  camera.cc  camera.cpp  camera.h  camera.hh  camera.hpp  client.cpp  client.hpp  component.hpp  config.c  config.cpp  config.hpp  cubemap.cc  cubemap.cpp  cubemap.hpp  directional_light.cc  directional_light.cpp  directional_light.hh  directional_light.hpp  display.cc  display.cpp  display.hh  display.hpp  empty_scene.cpp  empty_scene.hpp  engine.cpp  (+88 more)
(+407 files in other folders)
